--- a/style.css
+++ b/style.css
@@ -809,9 +809,10 @@ footer {
         align-items: center;
         flex-wrap: wrap;
         max-width: 600px;
-        margin: 0;
         padding: 0;
+        margin-left:40px ;
         justify-content: flex-start;
+
     }
 
     .cards {
