--- a/style.css
+++ b/style.css
@@ -155,14 +155,12 @@ header {
     height: 40px;
     justify-content: space-between;
 }
-
-.placeholder {
-    width: 300px;
-    font-size: 15px;
+.placeholder{
+    width: 70%;
+    outline: none;
+    border: none;
     background: none;
 }
-
-
 
 .input-1 input {
     border: none;
@@ -282,6 +280,7 @@ header {
     margin-left: 0px;
     gap: 50px;
     flex-wrap: wrap;
+
 }
 
 .Categories-p {
@@ -457,7 +456,7 @@ footer {
 @media screen and (max-width: 600px) {
 
     .Parent {
-        max-width: 74%;
+        max-width: 100%;
         margin: 0 auto;;
     }
 
@@ -472,7 +471,7 @@ footer {
         background-color: white;
         align-items: center;
         justify-content: start;
-        max-width: 1000%;
+        max-width: 100%;
         background-color: aliceblue;
     }
 
@@ -545,9 +544,12 @@ footer {
         border: 1px solid gray;
         display: flex;
         align-items: flex-start;
-        width: 40%;
+        width: 100%;
         height: 0px;
+
     }
+
+    
 
     .input-1{
         width: 40%;
@@ -558,7 +560,7 @@ footer {
         display: flex;
         align-items: center;
         flex-direction: column;
-        max-width: 100%;
+        width: 100%;
         padding: 0px;
 
 
@@ -598,7 +600,7 @@ footer {
         border: 1px solid gray;
         display: flex;
         align-items: center;
-        width: 80%;
+        width: 100%;
         margin-top: 18px;
         margin-right: 40px;
         height: 40px;
@@ -632,7 +634,7 @@ footer {
     .main-list {
         display: flex;
         align-items: center;
-        max-width: 70%;
+    width: 100%;
     }
     
 .list-item ul {
@@ -653,7 +655,8 @@ footer {
         flex-wrap: wrap;
         padding: 0px;
         gap: 0px;
-        max-width: 70%;
+        max-width: 100%;
+        overflow: scroll;
 
     }
 
@@ -662,7 +665,7 @@ footer {
         font-weight: 600;
         font-size: 10px;
         color: #2b363d;
-        margin-right: 100px;
+        margin-right: 10px;
         margin-top: 5px;
         width: 70px;
         overflow: hidden;
@@ -682,11 +685,13 @@ footer {
 
     .banner {
         margin: 0px 0px 0px 0px;
-        width: 74%;
+        width: 100%;
+        display: none;
     }
 
     .banner-two {
-        max-width: 74%;
+        max-width: 100%;
+        display: none;
     }
 
     .mobiles {
@@ -697,7 +702,6 @@ footer {
     }
 
     .mobile {
-        margin-right: 80px;
         width: 50px;
         height: 50px;
         padding: 0px;
@@ -950,7 +954,7 @@ footer {
     .last-list {
         flex-direction: column;
         display: flex;
-        max-width: 70%;
+        max-width: 100%;
         background-color: #ebeeef;
         justify-content: first baseline;
         align-items: center;
@@ -1002,7 +1006,7 @@ footer {
 
     footer {
         background-color: #002f34;
-        width: 70%;
+        width: 100%;
         margin: 0 auto;
         height: 60px;
         margin: 0px;
