--- a/style.css
+++ b/style.css
@@ -96,18 +96,30 @@ header {
     border-radius: 25px;
 }
 
-.input-box {
+
+
+
+.Location-search {
+    border: 1px solid gray;
     display: flex;
     align-items: center;
-    max-width: max-content;
-    border: 1px solid gray;
-    border-radius: 2px;
-    height: 40px;
-    gap: 12px;
-    top: 70px;
-    margin-top: 10px;
-    margin-left: 10px;
+    gap: 10px;
+    padding: 5px;
+
 }
+
+.Location-search input {
+    border: none;
+    outline: none;
+    flex-grow: 0;
+}
+
+
+
+
+
+
+
 
 .icon {
     display: flex;
@@ -118,19 +130,6 @@ header {
 
 }
 
-.Pakistan {
-    color: #002f34;
-    background: none;
-}
-
-
-.Main-input {
-    max-width: max-content;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    color: #002f34;
-}
 
 .Second-section {
     display: flex;
@@ -138,13 +137,6 @@ header {
     gap: 20px;
 }
 
-.Main-input input {
-    border: none;
-    outline: none;
-    color: #002f34;
-    font-size: 15px;
-    font-weight: 500;
-}
 
 .Main-input-two {
     border: 1px solid gray;
@@ -155,8 +147,9 @@ header {
     height: 40px;
     justify-content: space-between;
 }
-.placeholder{
-    width: 70%;
+
+.placeholder {
+    width: 300px;
     outline: none;
     border: none;
     background: none;
@@ -206,7 +199,7 @@ header {
 }
 
 .btn button {
-    border: none;
+
     font-size: 12px;
     color: #002f34;
     background: none;
@@ -222,6 +215,10 @@ header {
     background-color: #002f34;
     color: white;
 }
+
+
+
+
 
 
 .main-list {
@@ -256,15 +253,31 @@ header {
     color: #27a4e5;
 }
 
-.banner {
-    margin: 0px 0px 0px 0px;
-    width: 100%;
-}
 
-.banner-two {
+.banner{
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+
+}
+    .banner img {
+        width: 100%;
+        height: auto;
+        display: block;
+    }
+
+.banner-two{
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+.banner-two{
+    width: 100%;
+    height: auto;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+
 }
 
 
@@ -292,6 +305,9 @@ header {
     overflow: hidden;
 }
 
+.land {
+    display: none;
+}
 
 
 
@@ -455,15 +471,16 @@ footer {
 
 @media screen and (max-width: 600px) {
 
-    .Parent {
-        max-width: 100%;
-        margin: 0 auto;;
-    }
+
+.Parent{
+    max-width: 100%;
+    margin: 0px auto;
+}
 
 
 
     header {
-        
+
         z-index: 999;
         position: sticky;
         top: 0px;
@@ -472,14 +489,17 @@ footer {
         align-items: center;
         justify-content: start;
         max-width: 100%;
-        background-color: aliceblue;
     }
+
+
+
 
     body {
         font-family: 'Roboto', sans-serif;
         margin: 0px;
         padding: 0px;
         max-width: 100%;
+        overflow: hidden;
     }
 
 
@@ -490,34 +510,25 @@ footer {
     }
 
 
-    .input-box {
-        display: flex;
-        border-radius: 2px;
-        align-items: flex-start;
-        height: 40px;
-        gap: 1px;
-        margin-top: 10px;
-        border: none;
-        justify-content: flex-start;
-        margin-right: 0px;
-    }
 
 
-    .icon {
-        display: flex;
-        align-items: center;
-        height: 10%;
-        color: blue;
-        margin-right: 0px;
+    .Location-search {
         position: relative;
-        right: 110px;
-
+        right: 190px;
+        top: 10px;
+        padding: 5px;
+        border: none;
+        display: flex;
+    
     }
-
-    .Pakistan {
-        color: #002f34;
-        background: none;
+    
+    .Location-search input {
+        border: none;
+        outline: none;
+        flex-grow: 0;
+        width: 90px;
     }
+    
 
 
     .Main-input {
@@ -540,20 +551,6 @@ footer {
     }
 
 
-    .Main-input-two {
-        border: 1px solid gray;
-        display: flex;
-        align-items: flex-start;
-        width: 100%;
-        height: 0px;
-
-    }
-
-    
-
-    .input-1{
-        width: 40%;
-    }
 
 
     .Second-section {
@@ -571,6 +568,7 @@ footer {
         align-items: center;
         justify-content: space-between;
         gap: 20px;
+
     }
 
     .login {
@@ -592,29 +590,17 @@ footer {
         border-radius: 25px;
         text-align: center;
         display: flex;
-
+        text-align: center;
+        padding-left: 10px;
     }
+ .Main-input-two{
+    width: 90%;
+ }
+   
+
+    
 
 
-    .Main-input-two {
-        border: 1px solid gray;
-        display: flex;
-        align-items: center;
-        width: 100%;
-        margin-top: 18px;
-        margin-right: 40px;
-        height: 40px;
-    }
-
-
-    .search-icon {
-        display: flex;
-        background-color: transparent;
-    }
-
-    .search {
-        background-color: transparent;
-    }
 
 
 
@@ -634,18 +620,18 @@ footer {
     .main-list {
         display: flex;
         align-items: center;
-    width: 100%;
+        width: 100%;
     }
-    
-.list-item ul {
-    display: flex;
-    gap: 15px;
-    list-style-type: none;
-    font-size: 17px;
-    color: #002f34;
-    max-width: 67.5;
 
-}
+    .list-item ul {
+        display: flex;
+        gap: 15px;
+        list-style-type: none;
+        font-size: 17px;
+        color: #002f34;
+        max-width: 67.5;
+
+    }
 
 
 
@@ -669,7 +655,7 @@ footer {
         margin-top: 5px;
         width: 70px;
         overflow: hidden;
-        
+
     }
 
     .All-Categories {
@@ -678,22 +664,30 @@ footer {
         color: #002f34;
         max-width: 20%;
     }
-    
-    
 
 
 
     .banner {
-        margin: 0px 0px 0px 0px;
         width: 100%;
-        display: none;
+        height: auto;
     }
+
+    .banner img {
+        width: 100%;
+        height: auto;
+    }
+    
 
     .banner-two {
-        max-width: 100%;
-        display: none;
+        width: 100%;
+        height: auto;
     }
 
+    .banner-two img {
+        width: 100%;
+        height: auto;
+    }
+ 
     .mobiles {
         width: 100px;
         height: 0px;
@@ -837,8 +831,8 @@ footer {
         display: flex;
         align-items: center;
         flex-wrap: wrap;
-       max-width: 60%;
-       margin-right: 25%;
+        max-width: 60%;
+        margin-right: 25%;
         padding: 0;
         justify-content: center;
 
