--- a/style.css
+++ b/style.css
@@ -499,7 +499,6 @@ footer {
         margin: 0px;
         padding: 0px;
         max-width: 100%;
-        overflow: hidden;
     }
 
 
@@ -514,7 +513,7 @@ footer {
 
     .Location-search {
         position: relative;
-        right: 190px;
+        right: 120px;
         top: 10px;
         padding: 5px;
         border: none;
@@ -596,14 +595,6 @@ footer {
  .Main-input-two{
     width: 90%;
  }
-   
-
-    
-
-
-
-
-
 
 
     .icon-1 {
@@ -831,8 +822,7 @@ footer {
         display: flex;
         align-items: center;
         flex-wrap: wrap;
-        max-width: 60%;
-        margin-right: 25%;
+        width: 100%;
         padding: 0;
         justify-content: center;
 
@@ -842,7 +832,7 @@ footer {
     .cards {
         display: flex;
         flex-direction: column;
-        width: 300px;
+        width: 200px;
         height: 320px;
         border: 1px solid black;
         border-radius: 5px;
@@ -852,7 +842,7 @@ footer {
 
 
     .google-pixel-6a {
-        width: 300px;
+        width: 200px;
         border: none;
         border-radius: 5px;
         height: 180px;
@@ -894,7 +884,9 @@ footer {
 
 
 
-
+  .mobile-image{
+    text-align: center;
+  }
 
 
     .footer {
@@ -902,8 +894,8 @@ footer {
         justify-content: center;
         background-color: #f8faf9;
         flex-direction: column;
-        align-items: flex-start;
-        max-width: 70%;
+        align-items: center;
+        max-width: 100%;
         padding: 0px;
     }
 
